first new version

--- a/custom_components/hon/manifest.json
+++ b/custom_components/hon/manifest.json
@@ -1,10 +1,10 @@
 {
   "domain": "hon",
-  "name": "hOn",
-  "codeowners": ["@gvigroux","@MiguelAngelLV"],
+  "name": "hOn (WM, TD)",
+  "codeowners": ["@andreadegiovine"],
   "config_flow": true,
-  "documentation": "https://github.com/gvigroux/hon",
+  "documentation": "https://github.com/andreadegiovine/hon",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/gvigroux/hon/issues",
-  "version": "0.7.4"
+  "issue_tracker": "https://github.com/andreadegiovine/hon/issues",
+  "version": "0.0.1"
 }
