--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -116,46 +116,46 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           tags: true
 
-      - name: Get release notes
-        id: release-notes
-        run: |
-          changes=$(
-            git log --no-merges --pretty=format:"%H %s [%an]" origin/${{ steps.tag-name.outputs.branch_master }}..origin/${{ steps.tag-name.outputs.branch_develop }} | \
-            grep -v "^.* Revert \"" | \
-            grep -v "^.* Update manifest.json version to" | \
-            grep -v '\.yaml' | \
-            grep -v '\.json' | \
-            grep -v '\.md' | \
-            while read -r line; do
-              hash=$(echo "$line" | cut -d' ' -f1)
-              msg=$(git log -1 --pretty=%s "$hash")
-              if ! git log origin/${{ steps.tag-name.outputs.branch_master }}..origin/${{ steps.tag-name.outputs.branch_develop }} --grep="$msg" --invert-grep --pretty=format:"%H" | grep -q "$hash"; then
-                echo "- $(echo "$line" | cut -d' ' -f2-)"
-              fi
-            done
-          )
-
-          notes="## What's Changed
-          $changes"
-
-          if ! ${{ steps.tag-name.outputs.is_prerelease }}; then
-            notes="$notes
-            
-            
-            **Full Changelog**: https://github.com/${{ github.repository }}/compare/${{ steps.tag-name.outputs.previous_tag_name }}...${{ steps.tag-name.outputs.new_tag_name }}
-
-            
-            ## Support the project
-            [!["Buy Me A Coffee"](https://www.buymeacoffee.com/assets/img/custom_images/orange_img.png)](https://www.buymeacoffee.com/andreatito)
-            
-            [![ko-fi](https://ko-fi.com/img/githubbutton_sm.svg)](https://ko-fi.com/W7W11C9QJ7)"
-          fi
-          
-          echo "$notes"
-          
-          echo "notes<<EOF" >> $GITHUB_OUTPUT
-          echo "$notes" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+#      - name: Get release notes
+#        id: release-notes
+#        run: |
+#          changes=$(
+#            git log --no-merges --pretty=format:"%H %s [%an]" origin/${{ steps.tag-name.outputs.branch_master }}..origin/${{ steps.tag-name.outputs.branch_develop }} | \
+#            grep -v "^.* Revert \"" | \
+#            grep -v "^.* Update manifest.json version to" | \
+#            grep -v '\.yaml' | \
+#            grep -v '\.json' | \
+#            grep -v '\.md' | \
+#            while read -r line; do
+#              hash=$(echo "$line" | cut -d' ' -f1)
+#              msg=$(git log -1 --pretty=%s "$hash")
+#              if ! git log origin/${{ steps.tag-name.outputs.branch_master }}..origin/${{ steps.tag-name.outputs.branch_develop }} --grep="$msg" --invert-grep --pretty=format:"%H" | grep -q "$hash"; then
+#                echo "- $(echo "$line" | cut -d' ' -f2-)"
+#              fi
+#            done
+#          )
+#
+#          notes="## What's Changed
+#          $changes"
+#
+#          if ! ${{ steps.tag-name.outputs.is_prerelease }}; then
+#            notes="$notes
+#
+#
+#            **Full Changelog**: https://github.com/${{ github.repository }}/compare/${{ steps.tag-name.outputs.previous_tag_name }}...${{ steps.tag-name.outputs.new_tag_name }}
+#
+#
+#            ## Support the project
+#            [!["Buy Me A Coffee"](https://www.buymeacoffee.com/assets/img/custom_images/orange_img.png)](https://www.buymeacoffee.com/andreatito)
+#
+#            [![ko-fi](https://ko-fi.com/img/githubbutton_sm.svg)](https://ko-fi.com/W7W11C9QJ7)"
+#          fi
+#
+#          echo "$notes"
+#
+#          echo "notes<<EOF" >> $GITHUB_OUTPUT
+#          echo "$notes" >> $GITHUB_OUTPUT
+#          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Update master
         if: ${{ steps.tag-name.outputs.new_tag_branch == steps.tag-name.outputs.branch_master }}
@@ -176,5 +176,5 @@ jobs:
           tag_name: ${{ steps.tag-name.outputs.new_tag_name }}
           target_commitish: ${{ steps.tag-name.outputs.new_tag_branch }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          generate_release_notes: false
-          body: ${{ steps.release-notes.outputs.notes }}
+#          generate_release_notes: false
+#          body: ${{ steps.release-notes.outputs.notes }}
